# haskell-sprng

./: .gitignore  README.txt  haskell-sprng.cabal
examples/: Benchmark.hs  Demo.hs  Simple.cpp  Simple.hs  Spawn.hs
src/: Sprng.hs
src/Sprng/: Internal.hs
src/System/Random/SPRNG/: LFG.hs
src/System/Random/SPRNG/LFG/: Internal.hs
src/cbits/: lfg.c  lfg_wrapper.cpp  sprng_wrapper.cpp
src/include/: lfg.h  lfg_wrapper.h  sprng_wrapper.h
